src/styles/mixins.scss
/* ... */
@mixin ng-select-adjustment() {
  padding-bottom: 0;

  // Customization of dropdown container styling
  .ng-select-container {
    height: var(--height);
    min-height: var(--height);
    padding: 1px;
    border: 1px solid $color-neutral-40;
    border-radius: $radius-large;
    cursor: pointer;

    &:hover {
      border-color: $color-primary-80;
    }

    &::after {
      content: initial;
    }

    .ng-value-container {
      padding: 0 $padding-medium;
      border-top: var(--offset) solid transparent;

      .ng-placeholder {
        color: $color-neutral-80;
      }

      .ng-value {
        position: absolute;
        bottom: var(--bottom);
        color: $color-neutral;
        overflow: hidden;
        text-overflow: ellipsis;

        .ng-value-label {
          overflow: hidden;
          text-overflow: ellipsis;
        }
      }

      .ng-input {
        bottom: var(--bottom);
        padding: 0 $padding-medium;

        input {
          cursor: pointer;
          font-size: var(--font-size);
          caret-color: $color-primary;
        }
      }
    }

    .ng-spinner-loader {
      align-self: center;
    }

    .ng-clear-wrapper {
      display: flex;
      height: 100%;
      align-items: center;
      bottom: 0 !important;
    }
  }

  // Adjustments for focused 2px border
  &.ng-select-focused {
    .ng-select-container {
      border: 2px solid $color-primary-80;
      padding: 0;
    }

    .ng-value-container {
      .ng-placeholder {
        top: calc(var(--bottom) - 1px);
      }

      .ng-value {
        bottom: calc(var(--bottom) - 1px);
      }

      .ng-input {
        bottom: calc(var(--bottom) - 1px);
      }
    }
  }

  //Error state border color
  &.ng-invalid.ng-touched {
    .ng-select-container {
      border-color: $color-negative;
    }
  }

  // Custom scaling and positioning of active placeholder
  &.ng-select-focused,
  &.ng-select-opened,
  .ng-has-value {
    .ng-placeholder {
      top: var(--bottom);
      color: $color-neutral-dark !important;
      font-weight: bold;
      transform: scale(var(--scale)) !important;
      transition: none !important;
      backface-visibility: hidden;
      -webkit-font-smoothing: auto;
    }
  }

  // Custom dropdown icon
  .ng-arrow-wrapper {
    height: 100%;
    width: var(--height);
    background-color: $color-primary-darker;
    mask-image: url("../app/shared/components/icons/chevron-down.svg");
    mask-repeat: no-repeat;
    mask-position: 50%;
    bottom: 0 !important;

    .ng-arrow {
      display: none;
    }
  }

  // Custom disabled state
  &.ng-select-disabled {
    .ng-select-container {
      background-color: $color-neutral-10;
      cursor: default;

      input {
        cursor: default !important;
      }

      .ng-value-container .ng-placeholder {
        color: $color-neutral-80;
      }

      .ng-value-container .ng-value {
        color: $color-neutral-80;
      }

      &:hover {
        border-color: $color-neutral-40;
      }

      .ng-arrow-wrapper {
        visibility: hidden;
      }
    }
  }

  // Custom dropdown menu styling
  ng-dropdown-panel {
    &.ng-select-top {
      bottom: calc(100% + $padding-small);
    }

    &.ng-select-bottom {
      top: calc(100% + $padding-small);
    }

    &.ng-select-bottom,
    &.ng-select-top {
      border-radius: $radius-large;
      padding: $padding-smaller;

      .ng-option {
        border-radius: 6px;
        white-space: normal !important;
        line-break: normal !important;

        &.ng-option-marked,
        &.ng-option-selected {
          background: $color-primary-10;
          color: $color-neutral-dark;
        }
      }
    }

    .ng-dropdown-footer {
      min-height: unset;
    }
  }
}

@mixin ng-select-default-style() {
  :host {
    flex: 1;
  }

  :host ::ng-deep ng-select {
    &.medium {
      --height: 48px;
      --font-size: 14px;
      --bottom: 2px;
      --offset: 8px;
      --scale: calc(12 / 14);
    }

    &.large {
      --height: 56px;
      --font-size: 16px;
      --bottom: 8px;
      --offset: 14px;
      --scale: calc(12 / 16);
    }

    @include ng-select-adjustment;
  }
}

@mixin mat-textbox-input-adjustment() {
  height: var(--height);
}

@mixin mat-textbox-overflow-adjustment() {
  ::ng-deep .mat-mdc-form-field-flex > .mat-mdc-form-field-infix {
    overflow: hidden;
  }
}

@mixin mat-form-sizes() {
  &.medium {
    --height: 48px;
    --font-size: 14px;
    --offset: 17px;
    --scale: calc(12 / 14);
  }

  &.large {
    --height: 56px;
    --font-size: 16px;
    --offset: 20px;
    --scale: calc(12 / 16);
  }
}
/* ... */

